2007-11-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoParentFolder.m: no longer a subclass of
	SOGoObject, but of SOGoFolder instead.

	* SoObjects/SOGo/SOGoUserFolder.m: no longer a subclass of
	SOGoGCSFolder, but of SOGoFolder instead.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -lookupCalendarFolderForUID:uid]): fixed
	to take the new SOGoParentFolder class into account. Also, create
	the personal folder if it doesn't exist.

	* SoObjects/SOGo/SOGoFolder.[hm]: new class module implementing
	the parent of all SOGo containers.

	* SoObjects/SOGo/SOGoGCSFolder.[hm]: SOGoFolder class renamed to
	SOGoGCSFolder.

2007-11-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailToSelection.m ([UIxMailToSelection
	-getAddressesFromFormValues:_dict]): take NSString and NSArray
	values. Ignore addresses with a length of 0.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser -mailAccounts]): we now
	fetch the accounts from the user defaults and create default
	values if missing.

2007-11-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartTextViewer.m
	([UIxMailPartTextViewer -flatContentAsString]): re-added
	conversion of line-break to sequences of HTML "BR", with a fast
	algorithm in C.

	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
	-flatContentAsString]): simplified method now that we know
	-[NSString stringWithData:usingEncodingNamed:] has a more robust
	implementation.

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-showToAddress]): the answer is cached.

	* UI/Common/UIxObjectActions.m ([UIxObjectActions +initialize]):
	read "SOGoACLsSendEMailNotifications" from the user defaults to
	determiner whether to send an email when a user is added or
	removed from an object's acl.

	* SoObjects/Mailer/SOGoMailObject+Draft.m ([SOGoMailObject
	-contentForEditing]): make sure the htmlContent flag is set to NO